--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "bidello": "0.0.5",
     "detect-gpu": "^1.0.0",
+    "glsl-curl-noise": "0.0.4",
     "glsl-fxaa": "^3.0.0",
     "glslify-bundle": "^5.1.1",
     "glslify-deps": "^1.3.1",
