--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel src/index.html --no-autoinstall --open",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html -d docs"
   },
   "repository": {
     "type": "git",
