--- a/package.json
+++ b/package.json
@@ -19,20 +19,18 @@
   },
   "homepage": "https://github.com/luruke/boilerthree#readme",
   "devDependencies": {
-    "bidello": "0.0.5",
+    "bidello": "0.0.6",
     "detect-gpu": "^1.0.0",
     "glsl-curl-noise": "0.0.4",
     "glsl-fxaa": "^3.0.0",
     "glslify-bundle": "^5.1.1",
     "glslify-deps": "^1.3.1",
     "magicshader": "^0.1.2",
+    "math-toolbox": "^1.12.0",
     "orbit-controls-es6": "^2.0.0",
     "parcel-bundler": "^1.12.3",
     "resource-loader": "^2.2.4",
-    "three": "^0.105.1"
+    "three": "^0.105.2"
   },
-  "dependencies": {
-    "math-toolbox": "^1.12.0",
-    "utils": "^0.3.1"
-  }
+  "dependencies": {}
 }
